--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "axios": "^1.4.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
